nivasa-macros/tests/trybuild/validation_is_enum_malformed.stderr
error: expected `#[is_enum(MyEnum)]`
 --> tests/trybuild/validation_is_enum_malformed.rs:5:5
  |
5 |     #[is_enum]
  |     ^
