nivasa-macros/tests/trybuild/validation_is_enum_malformed.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct AccessForm {
    #[is_enum]
    access_level: String,
}

fn main() {}
